# unicode-fractions

./: .gitignore  .mailmap  CNAME  Cargo.toml  build.sh  index.html  index.js  license.txt  main.css  readme.md  rust-toolchain.toml
.cargo/: config
.github/workflows/: build.yml  pages.yml  rust.yml
crates/codegen/: Cargo.toml
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
public/: index.html
public/js/: ui.js  wasm-loading.js  wrapper.js
scripts/: build-wasm.sh  update-generated-code.sh
src/: generated.rs  lib.rs  single_character_fractions.rs  transformation.rs
web/public/: CNAME  index.html  main.css
web/public/js/: index.js  ui.js  wasm-loading.js  wrapper.js
